[package]
name = "rax"
version = "0.1.0"
authors = ["Clay Molocznik <clay@mojo.run>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/run-mojo/rax"
homepage = "https://github.com/run-mojo/rax"
documentation = "https://docs.rs/rax"
description = """
Rust wrapper for the ANSI C Radix Tree "rax" https://github.com/antirez/rax implementation used in Redis
"""
build = "build.rs"

[lib]
bench = false
crate-type = ["dylib", "rlib"]

[dependencies]
libc = "0.2"
num = "*"

[dev-dependencies]
bencher = "0.1.5"

[build-dependencies]
gcc = "0.3"